configure regex manager

--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -57,6 +57,7 @@ jobs:
           LINUX_VER: ${{ inputs.LINUX_VER }}
           PYTHON_VER: ${{ inputs.PYTHON_VER }}
           ARCH: ${{ matrix.ARCH }}
+          DOCKERFILE: ${{ inputs.IMAGE_REPO }}.Dockerfile
       - name: Build image
         uses: docker/build-push-action@v5
         with:
